# goit-python-hw-16

./: README.md  pyproject.toml
hw6db/: create_db.py  fill_data.py  select_eighth.py  select_fifth.py  select_first.py  select_fourth.py  select_ninth.py  select_second.py  select_seventh.py  select_sixth.py  select_tenth.py  select_third.py  students.db  students.sql
